--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -43,9 +43,10 @@
 {% endblock %}
 
 {% block content %}
+{% if user_profile.profile.image %}
 <div id="toggle">
   <nav class="menup">
-    <li class="profilee"><img src="http://el-cine-en-rosa.blogs.diezminutos.es/files/2014/11/jennifer-lawrence-cine-en-rosa.jpg"><i>{{user_profile.username}}</i></li>
+    <li class="profilee"><img src="{{user_profile.profile.image.url}}"><i>{{user_profile.username}}</i></li>
     <li><i class="fa fa-cog fa-lg"></i><a href="/config/profile">Configuracion</a></li>
     <li><i class="fa fa-inbox fa-lg"></i> Mensajes privados </li>
     <li><i class="fa fa-bookmark-o fa-lg"></i> Market</li>
@@ -53,6 +54,18 @@
     <li><i class="fa fa-play fa-lg"></i> Multimedia</li>   
   </nav>
 </div>
+{% else %}
+<div id="toggle">
+  <nav class="menup">
+    <li class="profilee"><img src="{{STATIC_URL}}img/generic-avatar.png"><i>{{user_profile.username}}</i></li>
+    <li><i class="fa fa-cog fa-lg"></i><a href="/config/profile">Configuracion</a></li>
+    <li><i class="fa fa-inbox fa-lg"></i> Mensajes privados </li>
+    <li><i class="fa fa-bookmark-o fa-lg"></i> Market</li>
+    <li><i class="fa fa-circle-o fa-lg"></i> Mis relaciones</li>
+    <li><i class="fa fa-play fa-lg"></i> Multimedia</li>   
+  </nav>
+</div>
+{% endif %}
 <div id="panel" style="display:none;"> 
 
   <div id="widget" style="display:none;"> 
