--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1467,7 +1467,6 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
   border-top: 5px solid rgba(44,44,44,0.777);
   box-shadow: 0 2px 10px rgba(0,0,0,0.8);
   opacity: 0.6;
-  position:relative;
   border-radius: 7px;
   cursor: move;
   font-family: 'Open Sans', sans-serif;
@@ -1480,6 +1479,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
   margin-top: -100px;
   margin-left: -292px; /*150px*/
   zoom : 1;
+  resize: none;
   
 }
 
@@ -1518,6 +1518,7 @@ h1 {
   margin-bottom: 1rem;
   font-family: 'Open Sans', sans-serif;
   display: block;
+  resize: none;
 }
 
 button[type="button"] {
