--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1473,12 +1473,11 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
   
   /*CENTRADO*/
   overflow: hidden;
-  position: relative;
+  position: absolute;
   left: 50%;
   top: 50%;
   margin-top: -100px;
   margin-left: -292px; /*150px*/
-  zoom : 1;
   resize: none;
   
 }
