--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -47,7 +47,7 @@
 <div id="toggle">
   <nav class="menup">
     <li class="profilee"><img src="{{user_profile.profile.image.url}}"><i>{{user_profile.username}}</i></li>
-    <li><i class="fa fa-cog fa-lg"></i><a href="/config/profile">Configuracion</a></li>
+    <li onclick="javascript:location.href='/config/profile'"><i class="fa fa-cog fa-lg"></i> Configuracion </li>
     <li><i class="fa fa-inbox fa-lg"></i> Mensajes privados </li>
     <li><i class="fa fa-bookmark-o fa-lg"></i> Market</li>
     <li><i class="fa fa-circle-o fa-lg"></i> Mis relaciones</li>
@@ -58,7 +58,7 @@
 <div id="toggle">
   <nav class="menup">
     <li class="profilee"><img src="{{STATIC_URL}}img/generic-avatar.png"><i>{{user_profile.username}}</i></li>
-    <li><i class="fa fa-cog fa-lg"></i><a href="/config/profile">Configuracion</a></li>
+    <li onclick="javascript:location.href='/config/profile'"><i class="fa fa-cog fa-lg"></i> Configuracion</li>
     <li><i class="fa fa-inbox fa-lg"></i> Mensajes privados </li>
     <li><i class="fa fa-bookmark-o fa-lg"></i> Market</li>
     <li><i class="fa fa-circle-o fa-lg"></i> Mis relaciones</li>
@@ -81,12 +81,21 @@
 
   </div>
 </div>
-<nav class="profile">
+{% if user_profile.profile.image %}
+      <nav class="profile" style="background-image: url('{{user_profile.profile.image.url}}');">
       <li class="fa fa-envelope fa-2x" id="publish2"></li>
-      <li class="fa fa-home fa-2x" onclick="javascript:location.href='/"></li>
+      <li class="fa fa-home fa-2x" onclick="javascript:location.href='/'"></li>
       <li class="fa fa-users fa-2x" onclick="javascript:location.href='/friends'"></li>
       <li class="fa fa-sign-out fa-2x" onclick="javascript:location.href='{% url 'account_logout' %}'"></li>
     </nav>
+{% else %}
+      <nav class="profile" style="background-image: url('{{STATIC_URL}}img/generic-avatar.png');">
+      <li class="fa fa-envelope fa-2x" id="publish2"></li>
+      <li class="fa fa-home fa-2x" onclick="javascript:location.href='/'"></li>
+      <li class="fa fa-users fa-2x" onclick="javascript:location.href='/friends'"></li>
+      <li class="fa fa-sign-out fa-2x" onclick="javascript:location.href='{% url 'account_logout' %}'"></li>
+    </nav>
+{% endif %}
 
 
  <div class="Mensaje" id="js-timer">
