--- a/skyfolk/templates/account/search.html
+++ b/skyfolk/templates/account/search.html
@@ -13,7 +13,7 @@
 .target {
   width: 280px;
   height: 380px;
-  background-color: #ececec;
+  background-color: #fff;
   -webkit-box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.75);
 -moz-box-shadow:    0px 0px 5px 0px rgba(50, 50, 50, 0.75);
 box-shadow:         0px 0px 5px 0px rgba(50, 50, 50, 0.75);
@@ -80,32 +80,38 @@ box-shadow:         0px 0px 5px 0px rgba(50, 50, 50, 0.75);
 }
 .informacion {
   list-style-type: none;
-  top: 40px;
+  top: 20px;
   margin: auto;
   position: relative;
   font-family: 'Open Sans', sans-serif;
   font-style: normal;
-  left: 110px;
+  left: 0px;
+  max-width: 200px;
+  text-align: center;
   
 }
 .informacion li {
-  display: table;
-  text-align: center;
+  display: list-item;
 }
 .nombre  {
   font-size: 1.2em;
-  margin-right: 15px;
+  display: block;
+  vertical-align: middle;
   position: relative;
 }
 .apodo {
-  font-size: 1em;
+  font-size: 0.9em;
+  display: block;
+  vertical-align: middle;
+  line-height: 5px;
   position: relative;
-  left: 15px;
+  color: #53A8A8;
 }
 .estado {
-  left: 15px;
-  position: relative;
   top: 25px;
+  display: block;
+  vertical-align: middle;
+  position: relative;
 }
 .controls {
   position: relative;
