--- a/skyfolk/static/css/buscar.css
+++ b/skyfolk/static/css/buscar.css
@@ -215,7 +215,7 @@
   position: absolute;
   right: 14px;
   top: 50px;
-  background: blue;
+  background: #fff;
   display: none;
   border-radius: 3px;
   font-family: 'Open Sans', sans-serif;
