--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -15,30 +15,63 @@
          <script type="text/javascript" src="http://www.google.com/jsapi"></script>
          <script type="text/javascript">google.load('jquery', '1.7.1');</script>
          <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-		 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+          <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
+		      <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+		  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
         <script src="//code.jquery.com/jquery-1.10.2.js"></script>
         <title>¡Bienvenido!</title>
         <meta name="description" content="Custom Login Form Styling with CSS3" />
         <meta name="keywords" content="skyfolk, social, login, registro, sky, folk," />
         <link rel="shortcut icon" href="{{STATIC_URL}}img/nube.jpg"> 
-	    <script src="{{STATIC_URL}}js/showandhide.js"></script>
+	      <script src="{{STATIC_URL}}js/showandhide.js"></script>
         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/style.css" />
-		<script src="{{STATIC_URL}}js/modernizr.custom.63321.js"></script>
+		  <script src="{{STATIC_URL}}js/modernizr.custom.63321.js"></script>
+
+      <script> <!-- backgrounds random -->
+
+      function cycleImages(){
+        var $active = $('#background_cycler .active');
+        var $next = ($('#background_cycler .active').next().length > 0) ? $('#background_cycler .active').next() : $('#background_cycler img:first');
+          $next.css('z-index',2);//move the next image up the pile
+          $active.fadeOut(1500,function(){//fade out the top image
+          $active.css('z-index',1).show().removeClass('active');//reset the z-index and unhide the image
+          $next.css('z-index',3).addClass('active');//make the next image the top one
+      });
+    }
+
+    $(window).load(function(){
+    $('#background_cycler').fadeIn(1500);//fade the background back in once all the images are loaded
+      // run every 7s
+      setInterval('cycleImages()', 7000);
+    })
+    </script>
+
 		<!--[if lte IE 7]><style>.main{display:none;} .support-note .note-ie{display:block;}</style><![endif]-->
 
 	{% block extra_head %}
 	{% endblock %}
     </head>
     <body>
-       <!--<div id="texto"><img class="logo" src="{{STATIC_URL}}img/logo.png"><h2>S<span>kyfolk.</span></h2>-->
+       <div id="background_cycler" > <!-- Random backgrounds -->
+
+      <script type="text/javascript">
+        $('#background_cycler').hide();//hide the background while the images load, ready to fade in later
+      </script>
+
+      <img class="active" src="{{STATIC_URL}}img/backgrounds/1.jpg" alt=""/>
+        <img src="{{STATIC_URL}}img/backgrounds/2.jpg" alt=""/>
+          <img src="{{STATIC_URL}}img/backgrounds/3.jpg" alt=""/>
+            <img src="{{STATIC_URL}}img/backgrounds/4.jpg" alt=""/>  
+              <img src="{{STATIC_URL}}img/backgrounds/5.jpg" alt=""/>
+      </div>
 <header>
-    <h5> <i>S</i>kyfolk.</h5>
+        <h5>
+        <i>S</i>kyfolk.
+        </h5>
     <div class="logo">
       <img src="http://s11.postimg.org/58jltbaqb/logo.png">
     </div>
-  </header>
+</header>
        	
        {% block content %}{% endblock %}
 
