--- a/skyfolk/templates/account/login.html
+++ b/skyfolk/templates/account/login.html
@@ -41,14 +41,16 @@ for a {{site_name}} account and sign in below:{% endblocktrans %}</p>
 {% endif %}
 <div class="block-form">
 	<form class="login form-3" method="POST" action="{% url 'account_login' %}">
+		<div class="form-group">
 	  {% csrf_token %}
 	  {{ form.as_p }}
 	  {% if redirect_field_value %}
-	  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+	  <input class="form-control" type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
 	  {% endif %}
+	  </div>
 	  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-	  <button class="primaryAction myButton" type="submit">{% trans "Sign In" %}</button>
-	  <a id="link-login" href="{{ signup_url }}">{% trans "Sign Up" %}</a>
+	  <button class="btn btn-success" type="submit">{% trans "Sign In" %}</button>
+	  <button type="button" class="btn btn-info" onclick="javascript:location.href='{{ signup_url }}'">{% trans "Sign Up" %}</button>
 	</form>
 </div>
 {% endblock %}
