--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -403,15 +403,15 @@
 
 					{% for item in publications_top15 %}
 					      
-						<div class="wrapper">
+						<div class="wrapper" id="pub-{{item.from_publication__id}}">
 							  <div id="box">
 							        <input id="profile" type="checkbox" checked> 
 							        <label class="popo" for="profile">
 							        
 									{% if item.user__profile__image and item.user__profile__image|file_exists %}
-									   <img src="{{MEDIA_URL}}{{item.user__profile__image}}" alt="img" class="img-responsive">
+									   <img src="{{MEDIA_URL}}{{item.user__profile__image}}" alt="img" class="usr-img img-responsive"><!-- id es avatar-publication-->
 									{% else %}
-									   <img src="{{STATIC_URL}}img/generic-avatar.png"  alt="img" class="img-responsive">
+									   <img src="{{STATIC_URL}}img/generic-avatar.png"  alt="img" class="usr-img img-responsive"> <!-- id es avatar-publication-->
 									{% endif %}
 							        <!--  <img id="avatar-publication" src="{{STATIC_URL}}img/generic-avatar.png" alt="img" class="img-responsive">-->
 							        </label>
@@ -432,113 +432,6 @@
 					
 				
 					
-					<!--
-					<div class="wrapper">
-						  <div id="box">
-						        <input id="profile" type="checkbox" checked> 
-						        <label class="popo" for="profile">
-						        <img src="http://www.1053kissfm.com/files/kp.jpg"alt="img">
-						        </label>
-						        <span class="entypo-thumbs-up" title="¡Me gusta!"></span> 
-						        <span class="entypo-forward" title="Responder"></span>
-						    <span class="entypo-plus" title="Añadir a..."></span>
-						  </div>
-						  <article class="articulo">
-						    <h2 class="h22"><a href="http://www.twitter.com/random_studio" target="_blank" >_random_studio</a> mentioned you</h2>
-						    <p class="parrafo">
-						      <a href="file:///C:/Users/Adrian/Desktop/skyfolk/perfil.html" target="_blank">_adriancarayol</a> How would you like to intern with us this summer?
-						    </p>
-						  </article>
-						
-						  <ul class="optionsfixed">
-						  <li class="fontawesome-eye-open"></li>
-						  <li class="fontawesome-star"></li>
-						  </ul>
-		  			</div>
-					<div class="wrapper">
-						  <div id="box">
-						        <input id="profile" type="checkbox" checked> 
-						        <label class="popo" for="profile">
-						        <img src="http://www.1053kissfm.com/files/kp.jpg"alt="img">
-						        </label>
-						        <span class="entypo-thumbs-up" title="¡Me gusta!"></span> 
-						        <span class="entypo-forward" title="Responder"></span>
-						    <span class="entypo-plus" title="Añadir a..."></span>
-						  </div>
-						  <article class="articulo">
-						    <h2 class="h22"><a href="http://www.twitter.com/random_studio" target="_blank" >_random_studio</a> mentioned you</h2>
-						    <p class="parrafo">
-						      <a href="file:///C:/Users/Adrian/Desktop/skyfolk/perfil.html" target="_blank">_adriancarayol</a> How would you like to intern with us this summer?
-						    </p>
-						  </article>
-				  	</div>
-		            <div class="wrapper">
-		
-						  <div id="box">
-						        <input id="profile" type="checkbox" checked> 
-						        <label class="popo1" for="profile">
-						        <img src="http://www.1053kissfm.com/files/kp.jpg"alt="img">
-						        </label>
-						        <span class="entypo-thumbs-up"></span> 
-						        <span class="entypo-forward"></span>
-						    
-						  </div>
-						  <article class="articulo">
-						    <h2 class="h22"><a href="http://www.twitter.com/random_studio" target="_blank" >_diodio</a> mentioned you</h2>
-						    <p class="parrafo">
-						      <a href="file:///C:/Users/Adrian/Desktop/skyfolk/perfil.html" target="_blank">_adriancarayol</a> Este mensaje es privado.
-						    </p>
-						  </article>
-		  			</div>
-					 <div class="wrapper2">                  
-							  <div id="box2">
-							        <input id="profile" type="checkbox" checked> 
-							        <label class="popo" for="profile">
-							        <img src="http://www.1053kissfm.com/files/kp.jpg"alt="img">
-							        </label>
-							        <span class="entypo-thumbs-up"></span> 
-							        <span class="entypo-forward"></span>
-							  </div>
-							  <article class="articulo">
-							    <h2 class="h22"><a href="http://www.twitter.com/random_studio" target="_blank" >_random_studio</a> mentioned you</h2>
-							    <p class="parrafo">
-							      <a href="file:///C:/Users/Adrian/Desktop/skyfolk/perfil.html" target="_blank">_adriancarayol</a> How would you like to intern with us this summer?
-							    </p>
-							  </article>
-					  </div>
-		              <div class="wrapper">
-							  <div id="box">
-							        <input id="profile" type="checkbox" checked> 
-							        <label class="popo" for="profile">
-							        <img src="http://www.1053kissfm.com/files/kp.jpg"alt="img">
-							        </label>
-							        <span class="entypo-thumbs-up"></span> 
-							        <span class="entypo-forward"></span>
-							  </div>
-							  <article class="articulo">
-							    <h2 class="h22"><a href="http://www.twitter.com/random_studio" target="_blank" >_random_studio</a> mentioned you</h2>
-							    <p class="parrafo">
-							      <a href="file:///C:/Users/Adrian/Desktop/skyfolk/perfil.html" target="_blank">_adriancarayol</a> How would you like to intern with us this summer?
-							    </p>
-							  </article>
-						</div>
-		              <div class="wrapper">
-							  <div id="box">
-							        <input id="profile" type="checkbox" checked> 
-							        <label class="popo" for="profile">
-							        <img src="http://www.1053kissfm.com/files/kp.jpg"alt="img">
-							        </label>
-							        <span class="entypo-thumbs-up"></span> 
-							        <span class="entypo-forward"></span>
-							  </div>
-							  <article class="articulo">
-							    <h2 class="h22"><a href="http://www.twitter.com/random_studio" target="_blank" >_random_studio</a> mentioned you</h2>
-							    <p class="parrafo">
-							      <a href="file:///C:/Users/Adrian/Desktop/skyfolk/perfil.html" target="_blank">_adriancarayol</a> How would you like to intern with us this summer?
-							    </p>
-							  </article>
-						</div>
-						-->
 				</div>
 				<div id="tab-amigos">
 				
@@ -546,11 +439,11 @@
 
 					      {% for item in friends_top12 %}
 					      			<!--<li><img src="{{STATIC_URL}}img/generic-avatar.png" class="img-responsive"><a href="/profile/{{ item.user__username }}">{{item.user__first_name}} {{item.user__last_name}} ({{item.user__username}})</a></li>-->
-									<li>
+									<li id="friend-{{item.user__id}}">
 									{% if item.user__profile__image and item.user__profile__image|file_exists %}
-									   <img src="{{MEDIA_URL}}{{item.user__profile__image}}" class="img-responsive">
+									   <img src="{{MEDIA_URL}}{{item.user__profile__image}}" class="usr-img img-responsive">
 									{% else %}
-									   <img src="{{STATIC_URL}}img/generic-avatar.png" class="img-responsive">
+									   <img src="{{STATIC_URL}}img/generic-avatar.png" class="usr-img img-responsive">
 									{% endif %}
 									<a href="/profile/{{ item.user__username }}">{{item.user__first_name}} {{item.user__last_name}} ({{item.user__username}})</a>
 									</li>
