--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -3,7 +3,7 @@
     <head>
 
 
-	     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	       <meta http-equiv="Content-Type" content="text/html; charset=utf-8" author="Adian,Carlos, Nestor"/>
          <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/noti.css" />
          <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}media/bootstrap/css/bootstrap.css" />
          <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}media/bootstrap/css/bootstrap.min.css" />
@@ -20,11 +20,11 @@
         <script src="//code.jquery.com/jquery-1.10.2.js"></script>
         <title>¡Bienvenido!</title>
         <meta name="keywords" content="skyfolk, social, login, registro, sky, folk," />
-        <link rel="shortcut icon" href="{{STATIC_URL}}img/nube.jpg"> 
+        <link rel="shortcut icon" href="{{STATIC_URL}}img/logo.ico"> 
 	      <script src="{{STATIC_URL}}js/showandhide.js"></script>
         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/style.css" />
 		  <script src="{{STATIC_URL}}js/modernizr.custom.63321.js"></script>
-
+    <!-- IMPORTANTE PARA CAMBIO DE BACKGROUND -->
       <script>
 
       function cycleImages(){
@@ -50,12 +50,15 @@
 	{% endblock %}
     </head>
     <body>
-    <header>
-        <h5><i>S</i>kyfolk.</h5>
-    <div class="logo">
-      <img src="http://s11.postimg.org/58jltbaqb/logo.png">
-    </div>
-</header>
+      <header>
+      <div class="head">
+            <h5><i>S</i>kyfolk.</h5>
+              <div class="logo">
+                  <img src="http://s11.postimg.org/58jltbaqb/logo.png">
+             </div>
+             </div>
+      </header>
+
        <div id="background_cycler" > <!-- Random backgrounds -->
 
       <script type="text/javascript">
@@ -67,6 +70,9 @@
           <img src="{{STATIC_URL}}img/backgrounds/3.jpg" alt=""/>
             <img src="{{STATIC_URL}}img/backgrounds/4.jpg" alt=""/>  
               <img src="{{STATIC_URL}}img/backgrounds/5.jpg" alt=""/>
+                <img src="{{STATIC_URL}}img/backgrounds/6.jpg" alt=""/>
+                  <img src="{{STATIC_URL}}img/backgrounds/7.jpg" alt=""/>
+                    <img src="{{STATIC_URL}}img/backgrounds/8.jpg" alt=""/>
       </div>
 
        	
