--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -55,13 +55,14 @@
     </nav>
   </aside>
 <section id="contra">
+<li>
 <form id="levi">
 	{% block cf-title %}{% endblock %}
 <!--
 <h4 id="cn"> Contraseña </h4>
 <h6 id="ch"> Cambia tu contraseña o recupera tu contraseña actual.</h6>
 -->
-</form>
+</form></li>
 <!-- <form id="float">--> <!-- NO PUEDE HABER UN FORM DENTRO DE OTRO FORM, YA QUE ENTONCES EL FORM NO FUNCIONA CORRECTAMENTE -->
 	{% block cf-form %}{% endblock %}
 <!--
