--- a/skyfolk/static/css/configuracion.css
+++ b/skyfolk/static/css/configuracion.css
@@ -16,7 +16,9 @@
   font-family: 'entypo', sans-serif;
 }
 body {
-background-image:url('http://upload.wikimedia.org/wikipedia/en/7/75/DowntownSF.jpg');
+	padding: 0;
+	margin: 20px 20px;
+	background-color: #cccccc;
 }
 
 hgroup {
@@ -50,15 +52,16 @@ h6 {
 
 /* Menu vertical */ 
 aside {
-  position:  relative;
-  margin-left: 20px;
-  background-color: #FAFAFA;
-  height: 420px;
-  width: 240px;
-  border-radius:  7px;
+  	position:  relative;
+  	margin-left: 20px;
+  	background-color: #FAFAFA;
+  	height: 420px;
+  	width: 240px;
+  	border-radius:  7px;
   	-webkit-box-shadow: 2px 2px 7px 0px #efefef;
 	-moz-box-shadow:    2px 2px 7px 0px #efefef;
 	box-shadow:         2px 2px 7px 0px #efefef;
+	margin-top: 70px;
 }
 aside nav {
   list-style-type:  none;
@@ -95,21 +98,51 @@ aside nav li:hover > i {
 }
 
 .actual {
-	color: black;
-	min-width: 120px;
-	border-radius: 3px;
-	text-shadow: rgb(150,150,150) 1px 1px 1px;
-	margin-bottom: 25px;
-
-	display:block;
-	margin-left:60px;
-	margin-top:10px;
+  width: 200px;
+  position: relative;
+  margin: auto;
+  padding: 5px 7px;
+  color: rgba(44,44,44,0.854);
+  border: 1px solid #ececec;
+  border-radius: 2px;
+  transition: all .3s linear;
+  -webkit-transition: all .3s linear;
+  -moz-transition: all .3s;
+  top: 0px;
+  margin-left: 20px;
+  margin-right: 0px;
+}
+label[for="id_first_name"] {
 	font-family: 'Open Sans', sans-serif;
+	position: absolute;
+  	color: rgba(44,44,44,0.776);
+  	font-weight: 100;
+  	top: 2px;
+  	margin-left: 5px;
+}
+label[for="id_last_name"] {
+	font-family: 'Open Sans', sans-serif;
+	position: absolute;
+  	color: rgba(44,44,44,0.776);
+  	font-weight: 100;
+  	top: 2px;
+  	margin-left: 5px;
+}
+.img-circle {
+	  width: 100px;
+  	height: 100px;
+  	border: 1px solid #489AB1;
+  	cursor: pointer;
+}
+.chg {
+	position: relative;
+	display: inline-block;
+	top: 100px;
+	height: auto;
 }
 .actual:focus {
-	border-color: blue;
-	border: 2px solid #6AFA9D;
-	box-shadow: rgb(150,150,150) 1px 1px;
+	box-shadow: 0 0 5px rgba(81, 203, 238, 1);
+   	border: 2px solid rgba(81, 203, 238, 1);
 }
 #float {
 
@@ -122,83 +155,75 @@ aside nav li:hover > i {
 	border-radius: 8px 8px 8px 8px;
 	box-shadow: rgb(196,196,196) 5px 5px;
 }
-#btn {
-	color:#0f4b6d;
-	border:1px solid #84acc3;
-	background-image:	 url('http://cssdeck.com/uploads/media/items/6/6Wl44TI.png'),
-	-moz-radial-gradient(	center bottom, circle,
-	rgba(89,208,244,1) 0,rgba(89,208,244,0) 100px),
-	-moz-linear-gradient(#4fbbf7, #3faeeb);
-
-		-webkit-gradient(	radial, 50% 100%, 0, 50% 100%, 100,from(rgba(89,208,244,1)), to(rgba(89,208,244,0))),
-		-webkit-gradient(linear, 0% 0%, 0% 100%, from(#4fbbf7), to(#3faeeb));
-	/* Animacion */
-		-webkit-transition:background-position 3s;
-		-moz-transition:background-position 3s;
-		transition:background-position 3s;
-
-	
-	border-radius: 5px;
-	width: 170px;
-	height: 50px;
-	font-family: 'Open Sans', sans-serif;
-	font-size: 15px;
-	color: white;
-	background-color: #303F73;
-
-	display:block;
-	margin:0 auto 0 auto;
-	margin-top:20px;
-
-	text-decoration:none !important;
-	white-space:nowrap;
-	
-	display:inline-block;
-	vertical-align:baseline;
-	position:relative;
-	cursor:pointer;
-	padding:10px 20px;
-	
-	background-repeat:no-repeat;
-	transition: all .3s ease-in;
-
-}
-#btn:hover {
-	background-color:#265B6A;
-	
-}
-#btn:active {
-bottom: -2px;
-}
 #contra {
-/*top: -10px;*/
-width: 470px;
-height: auto;
-/*margin-left: 385px;*/
-/*margin-top: -380px;*/
-font-family: 'Gafata', sans-serif;
-/*right: 100px;*/
-/*padding-right: 50px;*/
-background: #FFFFFF;
-border: 50px solid #FFF;
-border-radius: 8px 8px 8px 8px;
-box-shadow: rgb(196,196,196) 5px 5px;
-position: absolute;
-top:10%;
-left:40%;
+	position:  relative;
+ 	margin:  auto;
+  	display:  block;
+  	width:  700px;
+  	height: 600px;
+  	top:  -440px;
+  	left: 0px;
+  	border-radius: 7px;
+ 	-webkit-box-shadow: 2px 2px 7px 0px #efefef;
+	-moz-box-shadow:    2px 2px 7px 0px #efefef;
+	box-shadow:         2px 2px 7px 0px #efefef;
+  	border: 1px solid #ececec;
 }
-#cn {
-font-size: 20px;
-text-shadow: grey 0.5px 0.5px 0.5px;
-color: grey;
-margin: 5px;
+#contra li {
+	  	list-style-type: none;
+  		position: relative;
+  		display: block;
+  		margin-top: 30px;
 }
-#ch { 
-font-size: 12px;
-text-shadow: grey 0.2px 0.2px 0.2px;
-color: grey;
-margin: 6px;
-margin-top: 20px;
+.btn-info {
+	position: absolute;
+	display: inline-block;
+	top: 230px;
+	float: right;
+	right: 30px;
+	padding: 30px 20px;
+	width: 100px;
+	height: 30px;
+	line-height: 2px;
+	font-size: 2em;
+}
+#image-clear_id {
+	position: relative;
+	display: inline-block;
+}
+#id_image {
+	display: inline-block;
+	position: relative;
+	top: 40px;
+	margin-top: 30px;
+}
+label[for="id_image"] {
+	color: #ccc;
+	font-weight: 100;
+
+}
+hgroup {
+	position: relative;
+	margin-bottom: 30px;
+	margin-top: 0px;
+
+}
+.cn {
+	font-size: 20px;	
+	text-shadow: #ccc 0.5px 0.5px 0.5px;
+	color: #ccc;
+	font-family: 'Open Sans', sans-serif;
+	margin-left: 7px;
+	margin-top: -14px;
+
+}
+.ch { 
+	font-size: 12px;
+	text-shadow: #ccc 0.2px 0.2px 0.2px;
+	color: #ccc;
+	margin: 6px;
+	margin-top: 20px;
+	font-family: 'Open Sans', sans-serif;
 }
 .wrapper {
 	position:relative;
@@ -208,7 +233,19 @@ margin-top: 20px;
 	width: auto;
 	clear:both;
 }
-
+.profilex {
+	width: 620px;
+  	border-bottom-left-radius: 70px;
+  	border-top-left-radius: 70px;
+  	border-bottom-right-radius: 7px;
+  	border-top-right-radius: 7px;
+  	height: 100px;
+  	background-color: #fff;
+  	left: 20px;
+  	border: 1px solid #ececec;
+  	margin-top: 12px;
+  	position: relative;
+}
 
 @media (min-width: 1200px) {
 	#contra {
