--- a/skyfolk/templates/account/cf-changepass.html
+++ b/skyfolk/templates/account/cf-changepass.html
@@ -2,23 +2,27 @@
 
 
 {% block additional_files %}
-	<style>
-		#menucf-changepass {
-			background:#fafafa;
-		}
-	</style>
+
 {% endblock%}
 
 {% block cf-title %}
-	<h4 id="cn"> Contraseña </h4>
-	<h6 id="ch"> Cambia tu contraseña o recupera tu contraseña actual.</h6>
+	<h4 class="cn"> Contraseña </h4>
+	<h6 class="ch"> Cambia tu contraseña o recupera tu contraseña actual.</h6>
 {% endblock %}
 
 
 {% block cf-form %}
-	<label>Contraseña actual</label> <input class="actual" type="password" name="Contraseña actual." value="actual">
-	<label>Nueva contraseña</label> <input class="actual" type="password" name="Nueva contraseña." value="">
-	<label>Verificar contraseña</label> <input class="actual" type="password" name="Repita su nueva contraseña." value="">
-	<input id="btn" type="submit" value="Guardar cambios">
+<div class="wr">
+<div class="chg">
+		<label for="recent">Contraseña actual</label> 
+			<input id="recent" class="actual" type="password" name="Contraseña actual." value="actual">
+		<label for="new">Nueva contraseña</label>
+	 		<input id="new" class="actual" type="password" name="Nueva contraseña." value="">
+		<label for="new2">Verificar contraseña</label>
+			<input id="new2" class="actual" type="password" name="Repita su nueva contraseña." value="">
+
+	<button class="btn btn-info" id="btn" type="submit">Salvar cambios</button>
 	<p id="lost"><a href="/"> ¿Olvidaste tu contraseña?</a> </p>
+	</div>
+	</div>
 {% endblock %}
